# derma-jepa

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/data/: ham10000.yaml  ham10000_hf_mounted.yaml  ham10000_hf_mounted_exp002.yaml  ham10000_hf_mounted_exp003.yaml  ham10000_hf_mounted_exp004.yaml  ham10000_hf_mounted_exp005.yaml  ham10000_hf_mounted_exp006a.yaml  ham10000_hf_mounted_exp006b.yaml  ham10000_hf_mounted_exp007.yaml  ham10000_hf_mounted_exp008.yaml  ham10000_hf_mounted_smoke.yaml
configs/manifest/: fixture.yaml
configs/train/: jepa_predictor.yaml
data/: README.md
docs/audits/: derm1m-ham10000-overlap-audit.md
docs/experiments/: README.md  (+11 more)
paper/: Makefile  main.tex  refs.bib  verify_claims.py
scripts/: aggregate_seed_sweep.py  audit_derm1m_overlap.py  hf_jobs_constraints.txt  hf_jobs_ham10000_exp002.sh  hf_jobs_ham10000_exp003.sh  hf_jobs_ham10000_exp004.sh  hf_jobs_ham10000_exp005.sh  hf_jobs_ham10000_exp006a.sh  hf_jobs_ham10000_exp006b.sh  hf_jobs_ham10000_exp007.sh  hf_jobs_ham10000_exp008.sh  hf_jobs_ham10000_primary.sh  hf_jobs_seed_sweep.sh  hf_jobs_train.py  hf_jobs_train.sh  hf_jobs_train_bundle.sh
tests/: test_fixture_pipeline.py  test_hf_jobs_entrypoint.py  test_hf_runs_summary.py  test_jepa_training.py  test_manifest_contract.py  test_metrics.py  test_observability.py  test_public_data_hardened_proxy.py  test_public_data_held_out_nuisance.py  test_public_data_mixed_and_held_out_2.py  test_public_data_pipeline.py  test_training_adam_and_clip_config.py  test_training_mlp_predictor.py
(+78 files in other folders)
